--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_csc_picker
 description: A flutter package for showing a selected country, states, and cities.
 version: 0.0.1
-homepage: ///
+author: Fozle Rabbi<fozlerabbi796@gmail.com>
+homepage: https://github.com/fozlerabbi321/flutter_csc_picker
 
 environment:
   sdk: ">=2.15.1 <3.0.0"
